list-unstyled fix, z-index fix rocket-zone, commands padding fix

--- a/src/public/assets/rocket/css/rocket-20.css
+++ b/src/public/assets/rocket/css/rocket-20.css
@@ -448,6 +448,10 @@ mark,
   list-style: none;
 }
 
+td > .list-unstyled:last-child {
+  margin-bottom: 0;
+}
+
 .list-inline {
   padding-left: 0;
   list-style: none;
@@ -4714,6 +4718,7 @@ body {
  */
 .rocket-zone {
   position: relative;
+  z-index: 0;
 }
 
 .rocket-zone > header {
@@ -5308,7 +5313,7 @@ td .rocket-impl-translation > .rocket-control:not(:empty) {
   border-left: 1px solid #DAD7D3;
   white-space: nowrap;
   width: 5%;
-  padding: 0.5rem 0.75rem;
+  padding: 0.4rem 0.75rem;
 }
 
 .rocket-table > tbody .rocket-entry-selector {
